@@ -1,3 +1,6 @@
+2020/09/16
+• Shorthands for long pieces of text: !navy and !has.
+• meme command works with metacommands
 2020/09/15
 • User avatar appears behind meme text.
 • Ability to delete bugs through Discord.
